fix: remove christmas tree

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../static/favicon.ico" />
-    <title>🎄 Merry Christmas 🦌</title>
+    <title>Merry Christmas 🎄</title>
 </head>
 <body>
     <canvas class="webgl"></canvas>
